[workspace]
resolver = "2"
members = [
  "server",
  "client",
  "protocol",
  "job-security",
]

[workspace.dependencies]
nix = { version = "0.26", default-features = false, features = [] }
tokio = "1.27.0"
bincode = "1.3.3"
tokio-util = "0.7.7"
futures-util = { version = "0.3.28", default-features = false }
withfd = "0.1.0"
tracing = "0.1.37"
libc = "0.2.141"
