[package]
name = "job-security-client"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
description = "Universal job control - client library"
categories = ["command-line-utilities"]
repository = "https://github.com/yshui/job-security"
version = "0.1.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures-util = { workspace = true, features = ["sink"] }
libc.workspace = true
nix = { workspace = true, features = ["term", "user", "socket", "uio", "signal", "ioctl"] }
protocol = { version = "0.1.1", path = "../protocol", package = "job-security-protocol" }
tokio = { workspace = true, features = ["net", "io-util", "io-std", "macros", "signal"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
withfd = { workspace = true, features = ["tokio"] }
