[package]
name = "job-security-protocol"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
description = "Universal job control - server-client protocol"
categories = ["command-line-utilities"]
repository = "https://github.com/yshui/job-security"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode.workspace = true
bytes = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
tokio-util = { workspace = true, features = ["codec"] }
